--- a/src/main/resources/templates/PostDetails.html
+++ b/src/main/resources/templates/PostDetails.html
@@ -78,7 +78,7 @@
                 <div class="row no-gutters">
                     <th:block th:fragment="posts" th:each="comment : ${comments}">
                         <div class="col col-1 my-1">
-                            <img class="thumbnail" style="width: 100%; height: 100%;" th:src="${comment.url}" alt="IMG">
+                            <img class="thumbnail popover-img" style="width: 100%; height: 100%;" th:src="${comment.url}" alt="IMG">
                         </div>
                         <div class="col col-11 my-1">
                             <th:block th:if="${comment.user.role.id}==4">
@@ -120,8 +120,8 @@
                 </div>
             </div>
         </th:block>
+        <script  th:src="@{/AjaxScript/AjaxImageHover.js}"></script>
         <div th:insert="Fragment.html::createComment">
-
         </div>
 
     </div>
