--- a/src/main/resources/templates/account/create.html
+++ b/src/main/resources/templates/account/create.html
@@ -98,18 +98,18 @@
         </div>
         <div class="col col-8">
             <div class="container col col-8">
-                <form id="createNewUser" class="mt-2" th:object="${newUser}" action="/create-account">
+                <form id="createNewUser" class="mt-2" th:object="${user}" action="/create-account" method="post">
                     <div class="form-group">
                         <label for="username">User Name</label>
-                        <input type="text" class="form-control" id="username" placeholder="Enter User Name..">
+                        <input type="text" class="form-control" id="username" th:text="${newUser.username}"  >
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Enter Password..">
+                        <input type="password" class="form-control" id="password" th:text="${newUser.password}" placeholder="Enter Password..">
                     </div>
                     <div class="form-group">
                         <label for="email">User Name</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter Email..">
+                        <input type="email" class="form-control" id="email" th:text="${newUser.email}" placeholder="Enter Email..">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
