--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,92 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
-    <!-- CSS only -->
-
-    <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script th:src="@{/AjaxScript/AjaxMapping.js}"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+<head th:insert="Fragment.html::header">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/"><i class="fa fa-reddit-alien" aria-hidden="true"></i> Reddit</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/create-account">Sign Up</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
-        <!--------------------------------------------Search----------------------------------->
-        <li class="nav-item" style="list-style-type:none;" >
-            <form class="nav-item form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </li>
-        <!------------------------------------------------------------------------------------>
-
-        <!--------------------------------------------Login----------------------------------->
-        <li sec:authorize="${isAuthenticated()==false}" class="nav-item dropdown my-2 my-lg-0 d-none d-md-block mx-1" style="list-style-type:none; height: 38px;">
-            <a class="nav-link dropdown-toggle btn btn-outline-dark my-2 my-sm-0 text-center" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="height: 37.8px; padding: 0.4rem 1rem;">
-                Login
-            </a>
-            <div class="dropdown-menu dropdown-menu-right my-2">
-                <form class="form-inline" method="post" action="/login" accept-charset="UTF-8">
-                    <input class="form-control login col-11 mx-2 my-1" type="text" name="username" placeholder="Username.."><br>
-                    <input class="form-control login col-11 mx-2 my-1" type="password" name="password" placeholder="Password.."><br>
-                    <input class="btn btn-dark mx-2 my-1" type="submit" name="submit" value="Login">
-                    <input class="btn btn-dark mx-1 my-1" type="submit" name="submit" value="Signup">
-                </form>
+<nav th:insert="Fragment.html::navbar"></nav>
+<main style="margin-bottom: 4rem">
+    <div class="container">
+        <div class="row">
+            <div class="col col-12">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
             </div>
-        </li>
-        <!------------------------------------------------------------------------------------>
-        <!--------------------------------------------Logout----------------------------------->
-        <li sec:authorize="${isAuthenticated()==true}" class="nav-item dropdown my-2 my-lg-0 d-none d-md-block mx-1" style="list-style-type:none; height: 38px;">
-            <a sec:authentication="name" class="nav-link dropdown-toggle btn btn-outline-dark my-2 my-sm-0 text-center" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="height: 37.8px; padding: 0.4rem 1rem;">
-
-            </a>
-            <div class="dropdown-menu dropdown-menu-right my-2">
-                <form class="form-inline" method="post" action="/logout" accept-charset="UTF-8">
-                    <input class="btn btn-dark mx-2 my-1 w-100" type="submit" name="Logout" value="Logout">
-                </form>
-            </div>
-        </li>
-        <!------------------------------------------------------------------------------------>
+        </div>
     </div>
-</nav>
+    <div th:id="mainbody">
+        <th:block th:insert="Fragment.html::posts">
 
-<script src="" async defer></script>
+        </th:block>
+    </div>
+</main>
 </body>
 </html>
