--- a/src/main/resources/templates/Fragment.html
+++ b/src/main/resources/templates/Fragment.html
@@ -193,7 +193,7 @@
                             <input type="password" class="form-control" id="password" placeholder="Enter Password..">
                         </div>
                         <div class="form-group">
-                            <label for="email">User Name</label>
+                            <label for="email">User Email</label>
                             <input type="email" class="form-control" id="email" placeholder="Enter Email..">
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
